# ferray

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-numpy-design.md  yank_all.sh
ferray/: Cargo.toml
ferray-autodiff/: Cargo.toml  README.md
ferray-autodiff/src/: lib.rs
ferray-autodiff/tests/: property_tests.rs
ferray-core/: Cargo.toml  README.md
ferray-core-macros/: Cargo.toml  README.md
ferray-core-macros/src/: lib.rs
ferray-core/src/: buffer.rs  constants.rs  dynarray.rs  error.rs  layout.rs  lib.rs  ops.rs  prelude.rs  record.rs  verification_kani.rs
ferray-core/src/array/: aliases.rs  arc.rs  cow.rs  display.rs  introspect.rs  iter.rs  methods.rs  mod.rs  owned.rs  view.rs  view_mut.rs
ferray-core/src/creation/: mod.rs
ferray-core/src/dimension/: broadcast.rs  mod.rs  static_shape.rs
ferray-core/src/dtype/: casting.rs  finfo.rs  mod.rs  promotion.rs
ferray-core/src/indexing/: advanced.rs  basic.rs  extended.rs  mod.rs
ferray-core/src/manipulation/: extended.rs  mod.rs
ferray-core/tests/: macro_tests.rs  oracle.rs  property_tests.rs
ferray-fft/: Cargo.toml  README.md
ferray-fft/src/: complex.rs  freq.rs  hermitian.rs  lib.rs  nd.rs  norm.rs  plan.rs  real.rs  shift.rs
ferray-fft/tests/: acceptance.rs  oracle.rs  property_tests.rs
ferray-io/: Cargo.toml  README.md
ferray-io/src/: format.rs  lib.rs  memmap.rs
ferray-io/src/npy/: dtype_parse.rs  header.rs  mod.rs
ferray-io/src/npz/: mod.rs
ferray-io/src/text/: mod.rs  parser.rs
ferray-io/tests/: property_tests.rs
ferray-linalg/: Cargo.toml  README.md
ferray-linalg/src/: batch.rs  f16_support.rs  faer_bridge.rs  lib.rs  norms.rs  solve.rs
ferray-linalg/src/decomp/: cholesky.rs  eigen.rs  lu.rs  mod.rs  qr.rs  svd.rs
ferray-linalg/src/products/: mod.rs  tensordot.rs
ferray-linalg/tests/: oracle.rs  property_tests.rs
ferray-ma/: Cargo.toml  README.md
ferray-ma/src/: arithmetic.rs  constructors.rs  filled.rs  lib.rs  mask_ops.rs  masked_array.rs  reductions.rs  sorting.rs  ufunc_support.rs
ferray-ma/tests/: oracle.rs  property_tests.rs
ferray-numpy-interop/: Cargo.toml  README.md
ferray-numpy-interop/src/: arrow_conv.rs  dtype_map.rs  lib.rs  numpy_conv.rs  polars_conv.rs
ferray-polynomial/: Cargo.toml  README.md
ferray-polynomial/src/: chebyshev.rs  companion.rs  fitting.rs  hermite.rs  hermite_e.rs  laguerre.rs  legendre.rs  lib.rs  power.rs  roots.rs  traits.rs
ferray-polynomial/tests/: oracle.rs  property_tests.rs
ferray-random/: Cargo.toml  README.md
ferray-random/src/: generator.rs  lib.rs  parallel.rs  permutations.rs
ferray-random/src/bitgen/: mod.rs  pcg64.rs  philox.rs  xoshiro256.rs
ferray-random/src/distributions/: discrete.rs  exponential.rs  gamma.rs  misc_continuous.rs  mod.rs  multivariate.rs  normal.rs  uniform.rs
ferray-random/tests/: property_tests.rs
ferray-stats/: Cargo.toml  README.md
ferray-stats/src/: correlation.rs  histogram.rs  lib.rs  parallel.rs  searching.rs  set_ops.rs  sorting.rs
ferray-stats/src/reductions/: cumulative.rs  mod.rs  nan_aware.rs  quantile.rs
ferray-stats/tests/: oracle.rs  property_tests.rs
ferray-stride-tricks/: Cargo.toml  README.md
ferray-stride-tricks/src/: as_strided.rs  broadcast.rs  lib.rs  overlap_check.rs  sliding_window.rs
ferray-stride-tricks/tests/: property_tests.rs
ferray-strings/: Cargo.toml  README.md
ferray-strings/src/: align.rs  case.rs  concat.rs  lib.rs  regex_ops.rs  search.rs  split_join.rs  string_array.rs  strip.rs
ferray-strings/tests/: oracle.rs  property_tests.rs
ferray-test-oracle/: Cargo.toml
ferray-test-oracle/src/: lib.rs
ferray-ufunc/: Cargo.toml  README.md
ferray-ufunc/src/: cr_math.rs  dispatch.rs  fast_exp.rs  helpers.rs  lib.rs  operator_overloads.rs  parallel.rs
ferray-ufunc/src/kernels/: mod.rs  scalar.rs  simd_f32.rs  simd_f64.rs
ferray-ufunc/src/ops/: arithmetic.rs  bitwise.rs  comparison.rs  complex.rs  convolution.rs  explog.rs  floatintrinsic.rs  interpolation.rs  logical.rs  mod.rs  rounding.rs  special.rs  trig.rs
ferray-ufunc/tests/: oracle.rs  property_tests.rs  simd_scalar_identity.rs
ferray-window/: Cargo.toml  README.md
ferray-window/src/: functional.rs  lib.rs
ferray-window/tests/: property_tests.rs
ferray/src/: config.rs  lib.rs  prelude.rs
ferrum-autodiff/: Cargo.toml
ferrum-autodiff/src/: lib.rs
ferrum-core/: Cargo.toml
ferrum-core-macros/: Cargo.toml
ferrum-core-macros/src/: lib.rs
ferrum-core/src/: buffer.rs  constants.rs  dynarray.rs  error.rs  layout.rs  lib.rs  prelude.rs  record.rs  verification_kani.rs
ferrum-core/tests/: macro_tests.rs  property_tests.rs
ferrum-fft/: Cargo.toml
ferrum-fft/src/: complex.rs  freq.rs  hermitian.rs  lib.rs  nd.rs  norm.rs  plan.rs  real.rs  shift.rs
ferrum-fft/tests/: acceptance.rs  property_tests.rs
ferrum-io/: Cargo.toml
ferrum-io/src/: format.rs  lib.rs  memmap.rs
ferrum-linalg/: Cargo.toml
ferrum-linalg/src/: batch.rs  f16_support.rs  faer_bridge.rs  lib.rs  norms.rs  solve.rs
ferrum-linalg/tests/: property_tests.rs
ferrum-ma/: Cargo.toml
ferrum-ma/src/: arithmetic.rs  constructors.rs  filled.rs  lib.rs  mask_ops.rs  masked_array.rs  reductions.rs  sorting.rs  ufunc_support.rs
ferrum-numpy-interop/: Cargo.toml
ferrum-numpy-interop/src/: arrow_conv.rs  dtype_map.rs  lib.rs  numpy_conv.rs  polars_conv.rs
ferrum-polynomial/: Cargo.toml
ferrum-polynomial/src/: chebyshev.rs  companion.rs  fitting.rs  hermite.rs  hermite_e.rs  laguerre.rs  legendre.rs  lib.rs  power.rs  roots.rs  traits.rs
ferrum-polynomial/tests/: property_tests.rs
ferrum-random/: Cargo.toml
ferrum-random/src/: generator.rs  lib.rs  parallel.rs  permutations.rs
ferrum-random/tests/: property_tests.rs
ferrum-stats/: Cargo.toml
ferrum-stats/src/: correlation.rs  histogram.rs  lib.rs  parallel.rs  searching.rs  set_ops.rs  sorting.rs
ferrum-stats/tests/: property_tests.rs
ferrum-stride-tricks/: Cargo.toml
ferrum-stride-tricks/src/: as_strided.rs  broadcast.rs  lib.rs  overlap_check.rs  sliding_window.rs
fuzz/: Cargo.toml  (+1 more)
(+315 files in other folders)
