[package]
name = "ferray-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "N-dimensional array type and foundational primitives for ferray"

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
ferray-core-macros = { workspace = true }

[dependencies.half]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["std"]
std = []
f16 = ["dep:half"]
serde = ["dep:serde", "ndarray/serde"]
no_std = []
const_shapes = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
proptest = { workspace = true }
