[package]
name = "ferray-fft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "FFT operations (fft, ifft, rfft, fftfreq, plan caching) for ferray"

[dependencies]
ferray-core = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
ferray-test-oracle = { path = "../ferray-test-oracle" }
num-complex = { workspace = true }
