[package]
name = "ferray-linalg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Linear algebra operations (decompositions, solvers, einsum) for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }

[dependencies.half]
workspace = true
optional = true

[features]
default = []
f16 = ["dep:half", "ferray-core/f16"]

[dev-dependencies]
proptest = { workspace = true }
ferray-test-oracle = { path = "../ferray-test-oracle" }
