[package]
name = "ferray-ma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Masked arrays with mask propagation for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
ferray-stats = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
