[package]
name = "ferray-polynomial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Polynomial operations (evaluation, fitting, roots, arithmetic) for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-linalg = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
ferray-test-oracle = { path = "../ferray-test-oracle" }
