[package]
name = "ferray-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Statistical functions, reductions, sorting, and histograms for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
pulp = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
