[package]
name = "ferray-stride-tricks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Stride manipulation (as_strided, sliding_window_view) for ferray"

[dependencies]
ferray-core = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
