[package]
name = "ferray-test-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Oracle test utilities for validating ferray against NumPy fixtures"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ferray-core = { path = "../ferray-core" }
num-complex = "0.4"
