[package]
name = "ferray-ufunc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Universal functions and SIMD-accelerated elementwise operations for ferray"

[dependencies]
ferray-core = { workspace = true }
pulp = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
core-math = { workspace = true }

[dependencies.half]
workspace = true
optional = true

[features]
default = []
f16 = ["dep:half", "ferray-core/f16"]

[dev-dependencies]
proptest = { workspace = true }
