[package]
name = "ferray-window"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Window functions, vectorize, piecewise, and apply_along_axis for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
