[package]
name = "ferrum-autodiff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forward-mode automatic differentiation for ferrum"

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
