[package]
name = "ferrum-core-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros for ferrum-core (FerrumRecord, s![], promoted_type!)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
