[package]
name = "ferrum-linalg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linear algebra operations (decompositions, solvers, einsum) for ferrum"

[dependencies]
ferrum-core = { workspace = true }
ferrum-ufunc = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
