[package]
name = "ferrum-linalg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linear algebra operations (decompositions, solvers, einsum) for ferrum"

[dependencies]
ferrum-core = { workspace = true }
ferrum-ufunc = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }

[dependencies.half]
workspace = true
optional = true

[features]
default = []
f16 = ["dep:half", "ferrum-core/f16"]

[dev-dependencies]
proptest = { workspace = true }
