[package]
name = "ferrum-polynomial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Polynomial operations (evaluation, fitting, roots, arithmetic) for ferrum"

[dependencies]
ferrum-core = { workspace = true }
ferrum-linalg = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
