[package]
name = "ferrum-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Statistical functions, reductions, sorting, and histograms for ferrum"

[dependencies]
ferrum-core = { workspace = true }
ferrum-ufunc = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
